--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ build-SimulGenet/*.stash
 build-SimulGenet/*.h
 build-SimulGenet/SimulGenet
 build-SimulGenet/Makefile
+build-SimulGenet-Release
+build-SimulGenet-Release.zip
